# platypusd

./: .gitignore  Cargo.toml  README.md  run.sh
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/platypus/platypusd/: CallReceiver.kt  ClipboardSyncActivity.kt  ConnectionService.kt  MainActivity.kt
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: db.rs  discovery.rs  main.rs
core/src/api/: mod.rs  routes.rs  ws.rs
core/src/services/: bluetooth.rs  call.rs  clipboard.rs  mod.rs  rfcomm.rs  wifi_speaker.rs
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  global.d.ts  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
protocol/: protocol_spec.md
