[workspace]
resolver = "2"
members = [
    "core",
    "cli",
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
rcgen = "0.12"
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
quinn = "0.11"
rustls = "0.23"
mdns-sd = "0.7"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
libc = "0.2"
tokio-util = { version = "0.7", features = ["io"] }
