[package]
name = "platypusd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rcgen = { workspace = true }
ring = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
mdns-sd = { workspace = true }
futures-util = { workspace = true }
tower-http = { workspace = true }
